Fixed CMP stats not showing name

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -158,10 +158,18 @@ transform: translateY(-50%);
   background-color:rgb(77,102,132);
 }
 
+.help i
+{
+  color:white;
+  font-size: 3vh;
+}
+
 .btn-clear
 {
   background-color: transparent;
+  border: 1px solid white;
 }
+
 
 .btn-clear:hover
 {
